# GH-PR-Comment-Formatter

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
go-pr-comments/: Makefile  fetcher.go  fixtures_test.go  formatter.go  formatter_test.go  go.mod  main.go  main_test.go  models.go  models_test.go  parser.go  parser_test.go
pr_comments/: __init__.py  cli.py  fetcher.py  formatter.py  models.py  parser.py
src/: cli.rs  error.rs  fetcher.rs  formatter.rs  lib.rs  main.rs  models.rs  parser.rs  sanitizer.rs
tests/: __init__.py  fixtures.py  integration_tests.rs  test_cli.py  test_fetcher.py  test_formatter.py  test_integration.py  test_models.py  test_parser.py
