[package]
name = "pr-comments"
version = "0.1.0"
edition = "2021"
description = "CLI tool to fetch and format GitHub PR comments for LLM consumption"
license = "MIT"
authors = ["rjmurphy777"]
repository = "https://github.com/ROKT/github-pr-pull"
keywords = ["github", "pull-request", "cli", "llm", "code-review"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pr-comments"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
serde_json = "1.0"
