[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-comments"
version = "0.1.0"
description = "CLI tool to fetch and format GitHub PR comments for LLM consumption"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.5",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.8",
    "ruff>=0.1",
    "bandit[toml]>=1.7",
    "prospector[with_everything]>=1.10",
]

[project.scripts]
pr-comments = "pr_comments.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "integration: marks tests that require real GitHub API access (deselect with '-m \"not integration\"')",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pr_comments*"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["pr_comments"]
skip = [".git", ".venv", "venv", "build", "dist"]

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false

# Ruff configuration (fast linter, replaces flake8/pylint/etc)
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "E501", "PLC0415", "PLW1510"]
"pr_comments/cli.py" = ["PLR0912", "PLR0915"]  # CLI entry points naturally have many branches

# Bandit configuration (security linting)
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = [
    "B101",  # assert used for type narrowing
    "B404",  # subprocess module (required for gh CLI)
    "B603",  # subprocess without shell=True (safe: hardcoded command)
    "B607",  # partial path (gh is in PATH by design)
]
